<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#009688"
    tools:context=".PerfilGuardadoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_titulo_resumen"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tvResumen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnRegresarInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnRegresarInicio"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnNuevoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnNuevoPerfil" />

</LinearLayout>
